<resources>
    <string name="app_name">Drift</string>
    <string name="login_user_account">账号：</string>
    <string name="login_password">密码：</string>
    <string name="hint_user_account">手机号码</string>
    <string name="hint_password">密码</string>
    <string name="login_button">登陆</string>

    <string name="home">首页</string>
    <string name="contacts">好友</string>
    <string name="message">聊天</string>
    <string name="myself">我</string>

    <string name="actionbar_sendDrift">发漂流</string>
    <string name="actionbar_attentionDrift">关注</string>

    <string name="register_username">UserName</string>
    <string name="register_password">Password</string>
    <string name="register_phone">Mobile Phone</string>
    <string name="register">注册</string>
    <string name="mobile_contacts">手机联系人</string>
</resources>
