<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    android:orientation="vertical">

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#29cfd2"
        android:orientation="horizontal"
        app:layout_heightPercent="8%">

        <ImageButton
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:src="@mipmap/back_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="注册"
            app:layout_marginLeftPercent="37%" />
    </com.zhy.android.percent.support.PercentLinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/app_icon"
        android:layout_gravity="center_horizontal"
        app:layout_marginTopPercent="3%"
        />

        <com.zhy.android.percent.support.PercentLinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_heightPercent="50%"
            app:layout_marginTopPercent="5%"
            >

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                app:layout_marginTopPercent="2%"
                app:layout_heightPercent="20%">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:layout_paddingLeftPercent="2%"
                    android:src="@mipmap/register_username" />
                <EditText
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/register_username"
                    app:layout_marginLeftPercent="2%"
                    android:background="@null" />

            </com.zhy.android.percent.support.PercentLinearLayout>

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                app:layout_marginTopPercent="2%"
                app:layout_heightPercent="20%">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:layout_paddingLeftPercent="2%"
                    android:src="@mipmap/register_phone" />

                <EditText
                    android:id="@+id/register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/register_phone"
                    android:inputType="phone"
                    app:layout_marginLeftPercent="2%"
                    android:background="@null" />

            </com.zhy.android.percent.support.PercentLinearLayout>

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                app:layout_marginTopPercent="2%"
                app:layout_heightPercent="20%">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:layout_paddingLeftPercent="2%"
                    android:src="@mipmap/register_password" />

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/register_password"
                    app:layout_marginLeftPercent="2%"
                    android:inputType="textPassword"
                    android:background="@null" />

            </com.zhy.android.percent.support.PercentLinearLayout>

            <Button
                android:id="@+id/register_bt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@+id/id_password_layout"
                android:background="@drawable/login_button_bg"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_heightPercent="15%"
                app:layout_marginLeftPercent="6%"
                app:layout_marginRightPercent="6%"
                app:layout_marginTopPercent="10%" />

    </com.zhy.android.percent.support.PercentLinearLayout>

</com.zhy.android.percent.support.PercentLinearLayout>